add english translation

--- a/about-us.html
+++ b/about-us.html
@@ -142,13 +142,13 @@
             </div>
           </div>
           <div class="about-us__article-col about-us__article-col--2">
-            <h3 class="about-us__article-col__title">O nas</h3>
-            <p class="about-us__article-col__text">Firma 3N Solutions sp. z o.o. to kompleksowa konserwacja urządzeń elektro-energetycznych. Od 2010 roku budujemy doświadczenie oraz relacje z klientami na terenie całego kraju, poprawiając bezpieczeństwo oraz efektywność działania systemów elektro-energetycznych w zakładach naszych partnerów.</p>
+            <h3 class="about-us__article-col__title">About us</h3>
+            <p class="about-us__article-col__text">3N Solutions Sp. z o.o. specializes in comprehensive maintenance and cleaning of electrical equipment. Since 2010, we have been building experience and customer relations throughout the country, improving the safety and efficiency of electro-energy systems in our partners' facilities.</p>
           </div>
         </div>
         <div class="about-us__article-row about-us__article-row--2">
           <div class="about-us__article-col about-us__article-col--3">
-            <p class="about-us__article-col__text">Oferujemy najwyższej jakości obsługę, profesjonalnie wykonywane pomiary elektryczne (w tym również termowizyjne) jak również najbardziej efektywną z dostępnych na rynku technologii czyszczenia. Współpracujemy z największymi koncernami o zasięgu międzynarodowym, a także z firmami działającymi na rynku lokalnym. Indywidualnie podchodzimy do każdego Klienta poprzez najbardziej efektywne z dostępnych na rynku technologie czyszczenia.</p>
+            <p class="about-us__article-col__text">We offer the highest quality service, professionally performed electrical measurements (including thermovision) as well as the most effective cleaning technologies available on the market. We work with the largest international concerns, as well as with companies operating on the local market. We approach each client individually through the most effective cleaning technologies available on the market.</p>
           </div>
           <div class="about-us__article-col about-us__article-col--4">
             <div class="about-us__article-graphics about-us__article-graphics--2">
@@ -169,12 +169,13 @@
             </div>
           </div>
           <div class="about-us__article-col about-us__article-col--6">
-            <p class="about-us__article-col__text">Jesteśmy dumni, gdyż z sukcesem i satysfakcją klienta wykonaliśmy wszelkie dotychczas postawione przed nami zadania, a wszyscy nasi partnerzy wystawili nam pozytywne referencje kontynuując z nami współpracę.</p>
+            <p class="about-us__article-col__text">We are proud because we have completed all the tasks set before us with the success and satisfaction of the client, and all our partners have given us positive references while continuing our cooperation with us.</p>
           </div>
         </div>
         <div class="about-us__article-row about-us__article-row--4">
           <div class="about-us__article-col about-us__article-col--7">
-            <p class="about-us__article-col__text">Stosowana przez firmę 3N Solutions Sp. z o.o. technologia oparta jest na zastosowaniu innowacyjnego medium czyszczącego, którego głównym elementem jest mieszanka suchych gazów szlachetnych specjalnie przygotowywana na rampie samochodu technologicznego. Zanieczyszczenia usuwane z urządzeń i podzespołów w miejscu podania mieszanki, zabierane są automatycznie poprzez wyciąg ciśnieniowy.</p>
+            <p class="about-us__article-col__text">The 3NS technology is based on an innovative cleaning medium, the main element of which is a gas mixture specially prepared on the gas ramp of a technological car.
+              Contaminants removed from devices and components at the place where the mixture is applied are collected automatically by a pressure extractor.</p>
           </div>
           <div class="about-us__article-col about-us__article-col--8">
             <div class="about-us__article-graphics about-us__article-graphics--4">
@@ -190,36 +191,35 @@
 
     <article class="about-us__industries">
       <section class="container">
-        <h4 class="about-us__industries-title">Konserwowaliśmy urządzenia elektryczne u klientów
-          działających w następujących branżach:</h4>
+        <h4 class="about-us__industries-title">We have maintained electrical equipment for customers operating in the following industries:</h4>
           <div class="about-us__industries-content">
             <div class="about-us__industries-content__wrap">
               <div class="about-us__industries-row about-us__industries-row--1">
                 <div class="about-us__industries-box about-us__industries-box--1">
                   <figure class="about-us__industries-box__graphics">
                     <img src="images/icon1.svg" class="about-us__industries-box__graphics-img about-us__industries-box__graphics-img--1">
-                    <figcaption class="about-us__industries-box__graphics-title about-us__industries-box__graphics-title--1">Energetyka</figcaption>
+                    <figcaption class="about-us__industries-box__graphics-title about-us__industries-box__graphics-title--1">Power engineering</figcaption>
                   </figure>
                 </div>
                 <div class="about-us__industries-box about-us__industries-box--2">
                   <figure class="about-us__industries-box__graphics">
                     <img src="images/icon2.svg" class="about-us__industries-box__graphics-img">
-                    <figcaption class="about-us__industries-box__graphics-title">Przemysł
-                      hutniczy</figcaption>
+                    <figcaption class="about-us__industries-box__graphics-title">Steel 
+                      industry</figcaption>
                   </figure>
                 </div>
                 <div class="about-us__industries-box about-us__industries-box--3">
                   <figure class="about-us__industries-box__graphics">
                     <img src="images/icon3.svg" class="about-us__industries-box__graphics-img">
-                    <figcaption class="about-us__industries-box__graphics-title">Przemysł
-                      samochodowy</figcaption>
+                    <figcaption class="about-us__industries-box__graphics-title">Automotive 
+                      industry</figcaption>
                   </figure>
                 </div>
                 <div class="about-us__industries-box about-us__industries-box--4">
                   <figure class="about-us__industries-box__graphics">
                     <img src="images/icon4.svg" class="about-us__industries-box__graphics-img">
-                    <figcaption class="about-us__industries-box__graphics-title">Przemysł
-                      spożywczy</figcaption>
+                    <figcaption class="about-us__industries-box__graphics-title">Food 
+                      industry</figcaption>
                   </figure>
                 </div>
               </div>
@@ -228,22 +228,22 @@
                 <div class="about-us__industries-box about-us__industries-box--5">
                   <figure class="about-us__industries-box__graphics">
                     <img src="images/icon5.svg" class="about-us__industries-box__graphics-img">
-                    <figcaption class="about-us__industries-box__graphics-title">Produkcja
-                      papieru</figcaption>
+                    <figcaption class="about-us__industries-box__graphics-title">Paper 
+                      production</figcaption>
                   </figure>
                 </div>
                 <div class="about-us__industries-box about-us__industries-box--6">
                   <figure class="about-us__industries-box__graphics">
                     <img src="images/icon6.svg" class="about-us__industries-box__graphics-img">
-                    <figcaption class="about-us__industries-box__graphics-title">Przemysł
-                      chemiczny</figcaption>
+                    <figcaption class="about-us__industries-box__graphics-title">Chemical 
+                      industry</figcaption>
                   </figure>
                 </div>
                 <div class="about-us__industries-box about-us__industries-box--7">
                   <figure class="about-us__industries-box__graphics">
                     <img src="images/icon7.svg" class="about-us__industries-box__graphics-img">
-                    <figcaption class="about-us__industries-box__graphics-title">Przemysł
-                      petrochemiczny</figcaption>
+                    <figcaption class="about-us__industries-box__graphics-title">Petrochemical 
+                      industry</figcaption>
                   </figure>
                 </div>
               </div>
@@ -272,18 +272,18 @@
         <div class="footer-content__bottom">
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
               <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
               <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
                 <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
                 <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
                 00-819 Warszawa
               </span>
@@ -292,7 +292,7 @@
           </div>
           <div class="footer-content__bottom-center">
             <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
               <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
               </a>
               <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
@@ -305,9 +305,10 @@
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
+                KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
