--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>3N Solutions - Kontakt</title>
+  <title>Contact 3n Solutions</title>
 
   <!-- Style CSS -->
   <link rel="stylesheet" href="css/normalize.css">
@@ -40,55 +40,47 @@
           <nav class="nav-menu" role="navigation">
             <ul class="menu">
               <li class="menu__item menu__item--dropdown">
-                <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizations.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="gas-mixture.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonation.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="about-us.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="contact.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
                 <a href="przetargi.html" class="menu__link-ue js-anchor--link">
@@ -103,13 +95,14 @@
               </li>
 
               <li class="menu__item menu__item--color">
-                <span class="menu__link-dropdown menu__link-icon">
-                  <img src="images/ask.svg" class="menu__link-img" alt="zapytanie">
-                </span>
+              <span class="menu__link-dropdown menu__link-icon">
+                <img src="images/ask.svg" class="menu__link-img" alt="zapytanie">
+              </span>
                 <ul class="menu-dropdown js--menu-submenu">
                   <li class="menu-dropdown__item">
                     <span class="menu-dropdown__text menu-dropdown__text--mobile">+48 22 233 00 50</span>
-                    <a class="menu-dropdown__link menu-dropdown__link--mobile js-anchor--link" href="tel:+48 22 233 00 50"><img src="images/smartphone_2.svg" class="menu-dropdown__icon menu-dropdown__icon--1" alt="mobile"></a>
+                    <a class="menu-dropdown__link menu-dropdown__link--mobile js-anchor--link" href="tel:+48 22 233 00 50">
+                      <img src="images/smartphone_2.svg" class="menu-dropdown__icon menu-dropdown__icon--1" alt="mobile"></a>
                   </li>
                   <li class="menu-dropdown__item">
                     <span class="menu-dropdown__text menu-dropdown__text--envelop">biuro@3ns.com.pl</span>
@@ -125,8 +118,8 @@
       </section>
     </div>
     <!-- end of navigation -->
-  </header>
-  <!-- end of header -->
+</header>
+<!-- end of header -->
 
   <!-- contact -->
   <section class="contact">
@@ -161,7 +154,7 @@
             </div>
             <div class="contact__details-wrap contact__details-wrap--2">
               <div class="contact__details-address contact__details-address--1">
-                <h4 class="contact__details-address__title">Biuro Handlowe</h4>
+                <h4 class="contact__details-address__title">Sales Office</h4>
                 <div class="contact__details-address__content">
                   <a href="https://maps.google.com/?q=52.228670,20.880020" target="_blank" class="contact__details-address__content-anchor">
                     <img src="images/map.svg" class="contact__details-address__content-img" alt="email"></a>
@@ -170,7 +163,7 @@
                 </div>
               </div>
               <div class="contact__details-address contact__details-address--2">
-                <h4 class="contact__details-address__title">Siedziba firmy</h4>
+                <h4 class="contact__details-address__title">Headquarters</h4>
 
 
                 <span class="contact__details-address__text">ul. Złota 61/100,
@@ -234,68 +227,68 @@
   </section>
   <!-- end of contact -->
 
-  <!-- footer -->
-  <footer class="footer">
-    <section class="container">
-      <div class="footer-content">
-        <div class="footer-content__top">
-          <figure class="footer-content__top-left">
-            <img src="images/logo.svg">
-          </figure>
-          <figure class="footer-content__top-right">
-            <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
-            <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
-            <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
-            <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
-          </figure>
-        </div>
-        <div class="footer-content__bottom">
-          <div class="footer-content__bottom-left">
-            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
-
-              <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
-              <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
-            </div>
-            <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
-                <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
-                01-320 Warszawa</span>
+    <!-- footer -->
+    <footer class="footer">
+      <section class="container">
+        <div class="footer-content">
+          <div class="footer-content__top">
+            <figure class="footer-content__top-left">
+              <img src="images/logo.svg">
+            </figure>
+            <figure class="footer-content__top-right">
+              <img src="images/fe.svg" class="footer-content__top-right__img footer-content__top-right__img--1" alt="">
+              <img src="images/rp.svg" class="footer-content__top-right__img footer-content__top-right__img--2" alt="">
+              <img src="images/pl.svg" class="footer-content__top-right__img footer-content__top-right__img--3" alt="">
+              <img src="images/logo-ue.svg" class="footer-content__top-right__img footer-content__top-right__img--4" alt="">
+            </figure>
+          </div>
+          <div class="footer-content__bottom">
+            <div class="footer-content__bottom-left">
+              <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
+                <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
+                <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
               </div>
-              <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
-                <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
+              <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
+                <div class="footer-content__bottom-left__details-wrap">
+                  <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
+                  <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
+                  01-320 Warszawa</span>
+                </div>
+                <div class="footer-content__bottom-left__details-wrap">
+                  <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
+                  <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
+                  00-819 Warszawa
+                </span>
+                </div>
+              </div>
+            </div>
+            <div class="footer-content__bottom-center">
+              <div class="footer-content__bottom-center__content">
+                <h4 class="footer-content__bottom-center__title">Find us</h4>
+                <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
+                </a>
+                <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
+              </div>
+            </div>
+            <div class="footer-content__bottom-right">
+              <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
+                <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
                 00-819 Warszawa
-              </span>
+              </div>
+              <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
+                <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
+                  KRS: 0000257515, District Court for the Capital City of
+                  Warsaw, XII Commercial Division of the National
+                  Court Register NIP: 5213388077, REGON: 140555502
+                  Share capital: PLN 50,000 (paid up in full)</span>
               </div>
             </div>
           </div>
-          <div class="footer-content__bottom-center">
-            <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
-              <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
-              </a>
-              <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
-            </div>
-          </div>
-          <div class="footer-content__bottom-right">
-            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--1">
-              <span class="footer-content__bottom-right__details-3ns">3N Solutions Sp. z o.o.</span>ul. Złota 61/100
-              00-819 Warszawa
-            </div>
-            <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
-              <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
-            </div>
-          </div>
         </div>
-      </div>
-    </section>
-  </footer>
-  <!-- end of footer -->
+      </section>
+    </footer>
+    <!-- end of footer -->
 </section>
 <!-- end of wrapper -->
 
