add english translation

--- a/about-us.html
+++ b/about-us.html
@@ -198,7 +198,8 @@
                 <div class="about-us__industries-box about-us__industries-box--1">
                   <figure class="about-us__industries-box__graphics">
                     <img src="images/icon1.svg" class="about-us__industries-box__graphics-img about-us__industries-box__graphics-img--1">
-                    <figcaption class="about-us__industries-box__graphics-title about-us__industries-box__graphics-title--1">Power engineering</figcaption>
+                    <figcaption class="about-us__industries-box__graphics-title about-us__industries-box__graphics-title--1">Power
+                      engineering</figcaption>
                   </figure>
                 </div>
                 <div class="about-us__industries-box about-us__industries-box--2">
