--- a/index.html
+++ b/index.html
@@ -216,42 +216,42 @@
       <div class="modal__wrapper">
         <button class="modal__close js-close"></button>
         <div class="modal__content">
-          <h2 class="modal__title">Masz pytania dotyczącą naszej oferty?</h2>
-          <p class="modal__text">Zostaw nam maila, a my skontaktujemy się z Tobą, odpowiemy na wszystkie pytania oraz zrobimy BEZPŁATNĄ wycenę</p>
+          <h2 class="modal__title">Do you have questions about our offer?</h2>
+          <p class="modal__text">Leave us an email and we will contact you, answer all your questions and make a FREE quote.</p>
 
           <form id="modalForm" class="modal__form" method="post" action="send-modal--script.php">
             <div class="modal__form-row modal__form-row--1">
-              <input class="modal__form-input" type="text" name="name" id="name" placeholder="Twoje imię" required pattern=.{3,} data-error="Wypełnij to pole">
+              <input class="modal__form-input" type="text" name="name" id="name" placeholder="Your name" required pattern=.{3,} data-error="Wypełnij to pole">
             </div>
             <div class="modal__form-row modal__form-row--2">
-              <input class="modal__form-input" type="email" name="email" id="email" placeholder="Wpisz swój e-mail" required data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
+              <input class="modal__form-input" type="email" name="email" id="email" placeholder="Enter your e-mail" required data-error="Wpisz poprawny email" pattern="[^@\s]+@[^@\s]+\.[^@\s]+">
             </div>
-            <a href="#" role="button" class="modal__btn-more">Więcej</a>
+            <a href="#" role="button" class="modal__btn-more">More</a>
             <div class="modal__form-more">
               <div class="modal__form-row modal__form-row--3">
-                <input class="modal__form-input" type="number" name="phone" id="phone" placeholder="Telefon kontaktowy">
+                <input class="modal__form-input" type="number" name="phone" id="phone" placeholder="Phone number">
               </div>
               <div class="modal__form-row modal__form-row--4">
-                <textarea class="modal__form-textarea" name="message" id="message" cols="30" rows="3" placeholder="Wiadomość"></textarea>
+                <textarea class="modal__form-textarea" name="message" id="message" cols="30" rows="3" placeholder="Message"></textarea>
               </div>
             </div>
 
             <div class="modal__form-row modal__form-row--5">
               <input id="terms" type="checkbox" class="modal__form-checkbox" required data-error-text="Musisz wypełnić pole" name="terms">
               <label class="modal__form-label" for="terms">
-                <span class="modal__form-checkbox__text">Oświadczam, że zapoznałem/am się z <a href="polityka-prywatnosci.html" target="_blank" class="modal__form-link"><span class="modal__form-checkbox__text--bold">Regulaminem</span></a></span>
+                <span class="modal__form-checkbox__text">I declare that I have read the <a href="polityka-prywatnosci.html" target="_blank" class="modal__form-link"><span class="modal__form-checkbox__text--bold">Regulations</span></a></span>
               </label>
             </div>
             <div class="honey-row">
               <label for="honey">Jeżeli jesteś człowiekiem, nie wypełniaj tego pola</label>
               <input type="text" id="honey" name="honey">
             </div>
-            <button class="modal__form-btn" type="submit">Wyślij</button>
+            <button class="modal__form-btn" type="submit">Send</button>
           </form>
         </div>
       </div>
     </div>
-    <button class="modal__btn modal_btn--1 js-open">Kliknij proszę</button>
+    <button class="modal__btn modal_btn--1 js-open">Click please</button>
   </section>
 <!--   end of modal -->
 
