add english translation

--- a/contact.html
+++ b/contact.html
@@ -204,7 +204,7 @@
                 <div class="contact__form-row__gdpr-privacy">
                   <input id="terms" type="checkbox" required data-error-text="Musisz wypełnić pole" name="terms" class="contact__form-row__inp contact__form-row__inp--check">
                   <label class="contact__form-row__lab" for="terms">
-                    <span class="contact__form-row__lab-text">I declare that I have read the data <a href="polityka-prywatnosci.html" target="_blank" class="contact__form-row__link">privacy policy</a> and information about <a href="polityka-prywatnosci.html#data-administrator" target="_blank" class="contact__form-row__link">the Administrator</a></span>
+                    <span class="contact__form-row__lab-text">I declare that I have read the data <a href="privacy-policy.html" target="_blank" class="contact__form-row__link">privacy policy</a> and information about <a href="privacy-policy.html#data-administrator" target="_blank" class="contact__form-row__link">the Administrator</a></span>
                   </label>
                 </div>
               </div>
