--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
             <div class="modal__form-row modal__form-row--5">
               <input id="terms" type="checkbox" class="modal__form-checkbox" required data-error-text="Musisz wypełnić pole" name="terms">
               <label class="modal__form-label" for="terms">
-                <span class="modal__form-checkbox__text">I declare that I have read the <a href="polityka-prywatnosci.html" target="_blank" class="modal__form-link"><span class="modal__form-checkbox__text--bold">Regulations</span></a></span>
+                <span class="modal__form-checkbox__text">I declare that I have read the <a href="privacy-policy.html" target="_blank" class="modal__form-link"><span class="modal__form-checkbox__text--bold">Regulations</span></a></span>
               </label>
             </div>
             <div class="honey-row">
@@ -302,7 +302,7 @@
                 <div class="main__services-parallax__box-wrap">
                   <h3 class="main__services-parallax__box-wrap__title">Maintenance of electrical equipment</h3>
                   <p class="main__services-parallax__box-wrap__text">Maintenance of electrical devices is an essential element of proper maintenance in production plants. No downtime in production.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="konserwacja.html" class="main__services-parallax__box-wrap__anchor">More</a></button>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="maintenance.html" class="main__services-parallax__box-wrap__anchor">More</a></button>
                 </div>
               </div>
             </div>
@@ -316,7 +316,7 @@
                 <div class="main__services-parallax__box-wrap main__services-parallax__box-wrap--second">
                   <h3 class="main__services-parallax__box-wrap__title">Cleaning of electrical appliances</h3>
                   <p class="main__services-parallax__box-wrap__text">We use technology based on an innovative cleaning medium, the main element of which is a mixture of gases specially prepared on the gas ramp of a technological car.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie.html">More</a></button>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="cleaning.html">More</a></button>
                 </div>
               </div>
             </div>
@@ -331,7 +331,7 @@
                   <h3 class="main__services-parallax__box-wrap__title">Hydrodynamic cleaning</h3>
                   <p class="main__services-parallax__box-wrap__text">The high pressure solutions we use enable cleaning and removal of
                     concrete, corrosion, rust, paints, hard deposits and many other coatings that are difficult to remove. Using mobile aggregates and specialized nozzles, we can access places that are impossible to reach.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie-hydrodynamiczne.html">More</a></button>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="hydrodynamic-cleaning.html">More</a></button>
                 </div>
               </div>
             </div>
@@ -347,7 +347,7 @@
                   <p class="main__services-parallax__box-wrap__text">Our dry gas mix technology allows to remove 100% of soot from components and saves up to 90% of them. The time to remove damage 
                     caused by fire is very short, and the components are restored to their functional state in less time than required for the replacement of burnt wiring.
                   </p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="czyszczenie-pozarowe.html" class="main__services-parallax__box-wrap__anchor">More</a></button>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="after-fire-cleaning.html" class="main__services-parallax__box-wrap__anchor">More</a></button>
                 </div>
               </div>
             </div>
@@ -361,7 +361,7 @@
                 <div class="main__services-parallax__box-wrap main__services-parallax__box-wrap--fifth">
                   <h3 class="main__services-parallax__box-wrap__title">Thermovision and electrical measurements</h3>
                   <p class="main__services-parallax__box-wrap__text">Comprehensive measurements of electrical and energy installations. As part of the service, we are able to prepare a report including an analysis of the technical condition of components based on thermography and electrical measurements.</p>
-                  <button class="main__services-parallax__box-wrap__btn"><a href="pomiary.html">More</a></button>
+                  <button class="main__services-parallax__box-wrap__btn"><a href="thermovision.html">More</a></button>
                 </div>
               </div>
             </div>
@@ -729,10 +729,11 @@
   <!-- cookie -->
     <div class="cookie">
       <div class="cookie__ctn">
-        <p class="cookie__ctn-text">Używamy plików cookies, aby dostosować treści dostępne w naszym serwisie do Państwa indywidualnych potrzeb. Korzystając z naszych usług zgadzasz się na
-          <a href="polityka-prywatnosci.html" target="_blank" class="cookie__ctn-anchor">politykę prywatności.</a>
+        <p class="cookie__ctn-text">This site uses cookies. By continuing to browse the site, you agree to
+          our
+          <a href="privacy-policy.html" target="_blank" class="cookie__ctn-anchor">Privacy Policy.</a>
         </p>
-        <button class="cookie__ctn-btn">Zgadzam się</button>
+        <button class="cookie__ctn-btn">I agree</button>
       </div>
     </div>
   <!-- end of cookie -->
