add english translation

--- a/index.html
+++ b/index.html
@@ -637,7 +637,7 @@
                   <div class="main__technologies-content__box-rectangle main__technologies-content__box-rectangle--1"></div>
                   <h3 class="main__technologies-content__box-title">Gas mixture</h3>
                   <p class="main__technologies-content__box-text">The mixture reaches places inaccessible to traditional methods. At the same time, it is completely dry, does not cause moisture, does not react physically or chemically with the cleaned elements.</p>
-                  <a href="mieszanka-gazow.html" role="button" class="main__technologies-content__box-btn">More</a>
+                  <a href="gas-mixture.html" role="button" class="main__technologies-content__box-btn">More</a>
                 </div>
     
                 <div class="main__technologies-content__box-child">
@@ -645,7 +645,7 @@
                   <h3 class="main__technologies-content__box-title">Ozonation</h3>
                   <p class="main__technologies-content__box-text">Ozonation is a method, 
                     that uses a gas - ozone (O3), sometimes called active oxygen, which is one of the most effective disinfectants known.</p>
-                  <a href="ozonowanie.html" role="button" class="main__technologies-content__box-btn">More</a>
+                  <a href="ozonation.html" role="button" class="main__technologies-content__box-btn">More</a>
                 </div>
               </div>
               <div class="main__technologies-content__box main__technologies-content__box--3">
@@ -653,7 +653,7 @@
                   <div class="main__technologies-content__box-rectangle main__technologies-content__box-rectangle--3"></div>
                   <h3 class="main__technologies-content__box-title">Hydrodynamic cleaning</h3>
                   <p class="main__technologies-content__box-text">Professional services for industry: Hydrodynamic cleaning, Vacuum loading of waste, vacuuming, Renovation of structures, Special engineering knowledge - tailor-made solutions.</p>
-                  <a href="czyszczenie-hydrodynamiczne-2.html" role="button" class="main__technologies-content__box-btn">More</a>
+                  <a href="hydrodynamic-cleaning-2.html" role="button" class="main__technologies-content__box-btn">More</a>
                 </div>
               </div>
             </div>
