--- a/thermovision.html
+++ b/thermovision.html
@@ -85,8 +85,8 @@
                 <a href="contact.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
-                <a href="przetargi.html" class="menu__link-ue js-anchor--link">
-                  <img src="images/logo-ue.svg" class="menu__link-ue__img" alt="European Union">
+                <a href="tenders.html" class="menu__link-ue js-anchor--link">
+                  <img src="images/logo-ue-en.svg" class="menu__link-ue__img" alt="European Union">
                 </a>
               </li>
 
@@ -97,13 +97,14 @@
               </li>
 
               <li class="menu__item menu__item--color">
-                <span class="menu__link-dropdown menu__link-icon">
-                  <img src="images/ask.svg" class="menu__link-img" alt="zapytanie">
-                </span>
+              <span class="menu__link-dropdown menu__link-icon">
+                <img src="images/ask.svg" class="menu__link-img" alt="zapytanie">
+              </span>
                 <ul class="menu-dropdown js--menu-submenu">
                   <li class="menu-dropdown__item">
                     <span class="menu-dropdown__text menu-dropdown__text--mobile">+48 22 233 00 50</span>
-                    <a class="menu-dropdown__link menu-dropdown__link--mobile js-anchor--link" href="tel:+48 22 233 00 50"><img src="images/smartphone_2.svg" class="menu-dropdown__icon menu-dropdown__icon--1" alt="mobile"></a>
+                    <a class="menu-dropdown__link menu-dropdown__link--mobile js-anchor--link" href="tel:+48 22 233 00 50">
+                      <img src="images/smartphone_2.svg" class="menu-dropdown__icon menu-dropdown__icon--1" alt="mobile"></a>
                   </li>
                   <li class="menu-dropdown__item">
                     <span class="menu-dropdown__text menu-dropdown__text--envelop">biuro@3ns.com.pl</span>
@@ -115,12 +116,11 @@
             </ul>
           </nav>
         </div>
-
       </section>
     </div>
     <!-- end of navigation -->
-  </header>
-  <!-- end of header -->
+</header>
+<!-- end of header -->
 
   <!-- measurements -->
   <article class="measurements">
