--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </li>
                 <li class="menu__item menu-item--ue">
                   <a href="tenders.html" class="menu__link-ue js-anchor--link">
-                    <img src="images/logo-ue.svg" class="menu__link-ue__img" alt="European Union">
+                    <img src="images/logo-ue-en.svg" class="menu__link-ue__img" alt="European Union">
                   </a>
                 </li>
 
@@ -151,7 +151,6 @@
               </ul>
             </nav>
           </div>
-
         </section>
       </div>
       <!-- end of navigation -->
