--- a/maintenance.html
+++ b/maintenance.html
@@ -84,8 +84,8 @@
                 <a href="contact.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
-                <a href="przetargi.html" class="menu__link-ue js-anchor--link">
-                  <img src="images/logo-ue.svg" class="menu__link-ue__img" alt="European Union">
+                <a href="tenders.html" class="menu__link-ue js-anchor--link">
+                  <img src="images/logo-ue-en.svg" class="menu__link-ue__img" alt="European Union">
                 </a>
               </li>
 
