--- a/tenders--ue-1-en.html
+++ b/tenders--ue-1-en.html
@@ -42,59 +42,51 @@
           <nav class="nav-menu" role="navigation">
             <ul class="menu">
               <li class="menu__item menu__item--dropdown">
-                <a href="#" class="menu__link">Usługi<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Services<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--1 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="konserwacja.html" class="menu-submenu__link js-anchor--link">Konserwacja urządzeń elektroenergetycznych
-                    </a>
+                    <a href="maintenance.html" class="menu-submenu__link js-anchor--link">Maintenance of electrical equipment</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie.html" class="menu-submenu__link js-anchor--link">Czyszczenie urządzeń elektrycznych
-                    </a>
+                    <a href="cleaning.html" class="menu-submenu__link js-anchor--link">Cleaning of electrical appliances</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-pozarowe.html" class="menu-submenu__link js-anchor--link">Czyszczenie popożarowe
-                    </a>
+                    <a href="after-fire-cleaning.html" class="menu-submenu__link js-anchor--link">After-fire cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="pomiary.html" class="menu-submenu__link js-anchor--link">Pomiary termowizyjne i elektryczne
-                    </a>
+                    <a href="thermovision.html" class="menu-submenu__link js-anchor--link">Thermovision and electrical measurements</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="realizacje.html" class="menu__link menu__link--space js-anchor--link">Realizacje</a>
+                <a href="realizations.html" class="menu__link menu__link--space js-anchor--link">Realizations</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Technologie<span class="menu__link--arrow"></span></a>
+                <a href="#" class="menu__link">Technologies<span class="menu__link--arrow"></span></a>
                 <ul class="menu-submenu menu-submenu--2 js--menu-submenu">
                   <li class="menu-submenu__item">
-                    <a href="mieszanka-gazow.html" class="menu-submenu__link js-anchor--link">Mieszanka Gazów
-                    </a>
+                    <a href="gas-mixture.html" class="menu-submenu__link js-anchor--link">Gas mixture</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="czyszczenie-hydrodynamiczne-2.html" class="menu-submenu__link js-anchor--link">Czyszczenie hydrodynamiczne
-                    </a>
+                    <a href="hydrodynamic-cleaning-2.html" class="menu-submenu__link js-anchor--link">Hydrodynamic cleaning</a>
                   </li>
                   <li class="menu-submenu__item">
-                    <a href="ozonowanie.html" class="menu-submenu__link js-anchor--link">Ozonowanie
-                    </a>
+                    <a href="ozonation.html" class="menu-submenu__link js-anchor--link">Ozonation</a>
                   </li>
                 </ul>
               </li>
               <li class="menu__item">
-                <a href="o-nas.html" class="menu__link menu__link--space js-anchor--link">O nas</a>
+                <a href="about-us.html" class="menu__link menu__link--space js-anchor--link">About us</a>
               </li>
               <li class="menu__item">
-                <a href="kontakt.html" class="menu__link js-anchor--link">Kontakt</a>
+                <a href="contact.html" class="menu__link js-anchor--link">Contact</a>
               </li>
               <li class="menu__item menu-item--ue">
-                <a href="przetargi.html" class="menu__link-ue js-anchor--link">
-                  <img src="images/logo-ue.svg" class="menu__link-ue__img" alt="European Union">
+                <a href="tenders.html" class="menu__link-ue js-anchor--link">
+                  <img src="images/logo-ue-en.svg" class="menu__link-ue__img" alt="European Union">
                 </a>
               </li>
 
@@ -105,13 +97,14 @@
               </li>
 
               <li class="menu__item menu__item--color">
-                <span class="menu__link-dropdown menu__link-icon">
-                  <img src="images/ask.svg" class="menu__link-img" alt="zapytanie">
-                </span>
+              <span class="menu__link-dropdown menu__link-icon">
+                <img src="images/ask.svg" class="menu__link-img" alt="zapytanie">
+              </span>
                 <ul class="menu-dropdown js--menu-submenu">
                   <li class="menu-dropdown__item">
                     <span class="menu-dropdown__text menu-dropdown__text--mobile">+48 22 233 00 50</span>
-                    <a class="menu-dropdown__link menu-dropdown__link--mobile js-anchor--link" href="tel:+48 22 233 00 50"><img src="images/smartphone_2.svg" class="menu-dropdown__icon menu-dropdown__icon--1" alt="mobile"></a>
+                    <a class="menu-dropdown__link menu-dropdown__link--mobile js-anchor--link" href="tel:+48 22 233 00 50">
+                      <img src="images/smartphone_2.svg" class="menu-dropdown__icon menu-dropdown__icon--1" alt="mobile"></a>
                   </li>
                   <li class="menu-dropdown__item">
                     <span class="menu-dropdown__text menu-dropdown__text--envelop">biuro@3ns.com.pl</span>
@@ -123,12 +116,11 @@
             </ul>
           </nav>
         </div>
-
       </section>
     </div>
     <!-- end of navigation -->
-  </header>
-  <!-- end of header -->
+</header>
+<!-- end of header -->
 
   <section class="tenders">
     <section class="container">
