add english translation

--- a/tenders.html
+++ b/tenders.html
@@ -133,9 +133,7 @@
         </div>
         <h2 class="tenders__title">Projekty realizowane przez 3N Solutions:</h2>
         <ul class="tenders__list">
-          <li class="tenders__item"><a href="przetargi--ue-1.html" class="tenders__link tenders__link--1">Wzrost konkurencyjności firmy poprzez promocję marki 3N Solutions na rynku międzynarodowym” w ramach działania 3.3.3 Wsparcie MŚP w promocji marek produktowych – Go to Brand</a></li>
-          <li class="tenders__item"><a href="przetargi--ue-1-en.html" class="tenders__link tenders__link--2">Increasing company’s competitiveness by promoting 3N Solutions brand on the international market</a></li>
-          <li class="tenders__item"><a href="przetargi--ue-2.html" class="tenders__link tenders__link--3">Opracowanie innowacyjnej technologii MVC (medium voltage cleaning) czyszczenia urządzeń elektroenergetycznych pod średnim napięciem do 60kV</a></li>
+          <li class="tenders__item"><a href="tenders--ue-1-en.html" class="tenders__link tenders__link--1">Increasing company’s competitiveness by promoting 3N Solutions brand on the international market</a></li>
           <li class="tenders__item"><span class="tenders__link tenders__link--4">The development of innovalive MVC technology (medium voltage cleaning) for power units cleaning at medium voltage up to 60kV</span></li>
         </ul>
       </div>
