add english translation

--- a/tenders.html
+++ b/tenders.html
@@ -158,18 +158,18 @@
         <div class="footer-content__bottom">
           <div class="footer-content__bottom-left">
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--1">
-              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Kontakt</h4>
+              <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--1">Contact</h4>
               <span class="footer-content__bottom-left__details-email">biuro@3ns.com.pl</span>
               <span class="footer-content__bottom-left__details-phone">+48 22 233 00 50</span>
             </div>
             <div class="footer-content__bottom-left__details footer-content__bottom-left__details--2">
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Biuro Handlowe</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--2">Sales office</h4>
                 <span class="footer-content__bottom-left__details-adress">ul Szeligowska 40 a
                 01-320 Warszawa</span>
               </div>
               <div class="footer-content__bottom-left__details-wrap">
-                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Siedziba Firmy</h4>
+                <h4 class="footer-content__bottom-left__details-title footer-content__bottom-left__details-title--3">Headquarters</h4>
                 <span class="footer-content__bottom-left__details-adress">ul. Złota 61/100,
                 00-819 Warszawa
               </span>
@@ -178,7 +178,7 @@
           </div>
           <div class="footer-content__bottom-center">
             <div class="footer-content__bottom-center__content">
-              <h4 class="footer-content__bottom-center__title">Znajdziesz Nas</h4>
+              <h4 class="footer-content__bottom-center__title">Find us</h4>
               <a href="https://www.youtube.com/channel/UCIG0oIqClmQGIiZorvGrTLQ" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--yt"><img src="images/logo-yt.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--yt">
               </a>
               <a href="https://www.linkedin.com/company/3nsolutions/" target="_blank" class="footer-content__bottom-center__social footer-content__bottom-center__social--in"><img src="images/logo-linkedIn.svg" class="footer-content__bottom-center__social-img footer-content__bottom-center__social-img--in"></a>
@@ -191,9 +191,10 @@
             </div>
             <div class="footer-content__bottom-right__details footer-content__bottom-right__details--2">
               <span class="footer-content__bottom-right__details-krs">KRS:0000257515, Sąd Rejonowy dla m.st.
-                Warszawy XII Wydział Gospodarczy Krajowego
-                Rejestru Sądowego NIP:5213388077, REGON:140555502
-                Kapitał zakładowy:50 000 zł (wpłacony w całości)</span>
+                KRS: 0000257515, District Court for the Capital City of
+                Warsaw, XII Commercial Division of the National
+                Court Register NIP: 5213388077, REGON: 140555502
+                Share capital: PLN 50,000 (paid up in full)</span>
             </div>
           </div>
         </div>
